NP-3392: Created initial test for handler